Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -1,5 +1,5 @@
 [package]
-name = ocperftools
+name = pmu-tools
 url = file:///aot/build/clearlinux/packages/ocperftools/ocperftools-v1.0.0.tar.gz
 archives = 
 giturl = 
