Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = pmu-tools
-url = file:///aot/build/clearlinux/packages/ocperftools/ocperftools-v1.0.0.tar.gz
+url = file:///aot/build/clearlinux/packages/pmu-tools/pmu-tools-v1.0.0.tar.gz
 archives = 
 giturl = 
 domain = 
@@ -24,6 +24,8 @@ altcargo1 = false
 altcargo1_lto = false
 # enable cargo local with pgo
 altcargo_pgo = false
+# enable cargo local with instrumented sampling bolt
+altcargo_sample_bolt = false
 # alternative pgo flags
 altflags_pgo = false
 # alternative pgo 32bits flags
