--- a/options.conf
+++ b/options.conf
@@ -69,13 +69,15 @@ fast-math = false
 # enable filtering of provides and requires
 filters_provreq = false
 # alternative flags
-fsalt1 = false
+fsalt1 = true
 # alternative 32bits flags
 fsalt1_32 = false
 # optimize build for speed over size
 funroll-loops = false
 # set flags to smallest -02 flags possible
 insecure_build = false
+# do not remove current buildroot
+keepbuildroot = false
 # do not remove static libraries
 keepstatic = true
 # do not require autostart subpackage
