Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -68,6 +68,8 @@ exclude_locales = false
 fast-math = false
 # enable filtering of provides and requires
 filters_provreq = false
+# enable %find_lang macro
+findlang = false
 # alternative flags
 fsalt1 = true
 # alternative 32bits flags
